force-app/main/default/objects/Renewal_Status__c/Renewal_Status__c.object-meta.xml
<CustomObject>
    <label>Renewal Status</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>