force-app/main/default/objects/Renewal_Status__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Renewal Status</relationshipLabel>
    <relationshipName>Company</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>