force-app/main/default/objects/Renewal_Status__c/fields/Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Renewal_Status2</relationshipName>
    <type>Lookup</type>
</CustomField>