force-app/main/default/objects/Renewal_Status__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Date</label>
    <type>DateTime</type>
</CustomField>