force-app/main/default/objects/Renewal_Status__c/fields/Date_sent_to_ISI_Site__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_to_ISI_Site__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Incentive Comp Team Extracted Data</label>
    <type>DateTime</type>
</CustomField>