force-app/main/default/objects/Renewal_Status__c/fields/Date_Submitted_For_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_For_Incentives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Ready to Send to IncentiveComp Team</label>
    <type>DateTime</type>
</CustomField>