force-app/main/default/objects/Renewal_Status__c/fields/Efective_Date__c.field-meta.xml
<CustomField>
    <fullName>Efective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>