force-app/main/default/objects/Renewal_Status__c/fields/GL_Membership__c.field-meta.xml
<CustomField>
    <fullName>GL_Membership__c</fullName>
    <label>GL Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>