force-app/main/default/objects/Renewal_Status__c/fields/isRenewalStatusRecord__c.field-meta.xml
<CustomField>
    <fullName>isRenewalStatusRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewal Status Record?</label>
    <type>Checkbox</type>
</CustomField>