force-app/main/default/objects/Renewal_Status__c/fields/Partial_Term_Mbrs__c.field-meta.xml
<CustomField>
    <fullName>Partial_Term_Mbrs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Partial Term Mbrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>