force-app/main/default/objects/Renewal_Status__c/fields/Product_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Product_Confirmed__c</fullName>
    <label>Product Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>CERA</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>HIA</fullName>
            </value>
            <value>
                <fullName>HRA</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>Medicare Supplement</fullName>
            </value>
            <value>
                <fullName>Part D (ASO)</fullName>
            </value>
            <value>
                <fullName>Part D (Fully Insured)</fullName>
            </value>
            <value>
                <fullName>RRA</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>