force-app/main/default/objects/Renewal_Status__c/fields/Renewal_Confirmed_Members_Sale__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Confirmed_Members_Sale__c</fullName>
    <label>Renewal Confirmed/Members Safe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed; All Members Safe</fullName>
            </value>
            <value>
                <fullName>Confirmed; Intersegment Transfer Out</fullName>
            </value>
            <value>
                <fullName>Confirmed; Partial Cancel</fullName>
            </value>
            <value>
                <fullName>No-Full Cancel</fullName>
            </value>
            <value>
                <fullName>Pending-Process Not Started</fullName>
            </value>
            <value>
                <fullName>Pending-In Process; No Risk</fullName>
            </value>
            <value>
                <fullName>Pending-In Process; With Risk</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>