force-app/main/default/objects/Renewal_Status__c/fields/RFPs_this_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>RFPs_this_Sales_Cycle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFPs this Sales Cycle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>