force-app/main/default/objects/Renewal_Status__c/fields/Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Cycle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>