force-app/main/default/objects/Renewal_Status__c/fields/Sales_person_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_person_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Renewal_Status_1</relationshipName>
    <type>Lookup</type>
</CustomField>