force-app/main/default/objects/Renewal_Status__c/fields/Sales_Person_1_split_percentage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_1_split_percentage__c</fullName>
    <label>Sales Person 1 Split Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>