force-app/main/default/objects/Renewal_Status__c/fields/Sales_Person_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Renewal_Status</relationshipName>
    <type>Lookup</type>
</CustomField>