force-app/main/default/objects/Renewal_Status__c/fields/Specialty_Benefits_SCE__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Benefits_SCE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialty Benefits SCE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specialty_Benefits_SCE</relationshipName>
    <type>Lookup</type>
</CustomField>