force-app/main/default/objects/Renewal_Status__c/fields/Submit_For_Sales_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Sales_Incentives__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Send to Incentive Comp Team</label>
    <type>Checkbox</type>
</CustomField>