force-app/main/default/objects/Renewal_Status__c/fields/Up_for_Renewal_this_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Up_for_Renewal_this_Sales_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Up for Renewal this Sales Cycle</label>
    <type>Checkbox</type>
</CustomField>