force-app/main/default/objects/Renewal_Status__c/fields/VPCR_RVP__c.field-meta.xml
<CustomField>
    <fullName>VPCR_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VPCR/RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Renewal_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>