force-app/main/default/objects/Renewal_Status__c/fields/Will_sales_incentives_be_split__c.field-meta.xml
<CustomField>
    <fullName>Will_sales_incentives_be_split__c</fullName>
    <label>Will Sales Incentives be Split</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>