force-app/main/default/objects/Renewal_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Company__c</columns>
    <columns>Sales_Cycle__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Business_Line__c</columns>
    <columns>Up_for_Renewal_this_Sales_Cycle__c</columns>
    <columns>Renewal_Confirmed_Members_Sale__c</columns>
    <columns>RFPs_this_Sales_Cycle__c</columns>
    <columns>Efective_Date__c</columns>
    <columns>Product_Confirmed__c</columns>
    <columns>Product_Line__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>contains</operation>
        <value>Office of the Comptroller of the Currency</value>
    </filters>
    <label>Debbie&apos;s</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>