force-app/main/default/objects/Renewal_Status__c/listViews/All_Renewals.listView-meta.xml
<ListView>
    <fullName>All_Renewals</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Submit_For_Sales_Incentives__c</columns>
    <columns>Sales_Cycle__c</columns>
    <columns>VPCR_RVP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>contains</operation>
        <value>husq</value>
    </filters>
    <label>All Renewals</label>
</ListView>