force-app/main/default/objects/Renewal_Status__c/listViews/By_Company.listView-meta.xml
<ListView>
    <fullName>By_Company</fullName>
    <columns>Company__c</columns>
    <columns>Sales_Cycle__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>De Nora</value>
    </filters>
    <label>By Company</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>