force-app/main/default/objects/Renewal_Status__c/listViews/Michele_Validations.listView-meta.xml
<ListView>
    <fullName>Michele_Validations</fullName>
    <columns>Company__c</columns>
    <columns>Sales_Cycle__c</columns>
    <columns>Efective_Date__c</columns>
    <columns>NAME</columns>
    <columns>Renewal_Confirmed_Members_Sale__c</columns>
    <columns>Submit_For_Sales_Incentives__c</columns>
    <columns>Product_Confirmed__c</columns>
    <columns>Date_Submitted_For_Incentives__c</columns>
    <columns>Business_Line__c</columns>
    <columns>VPCR_RVP__c</columns>
    <columns>Specialty_Benefits_SCE__c</columns>
    <columns>Will_sales_incentives_be_split__c</columns>
    <columns>Confirmed_By__c</columns>
    <columns>Eligible_for_Sales_Incentives__c</columns>
    <columns>isRenewalStatusRecord__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>contains</operation>
        <value>Estee Lauder</value>
    </filters>
    <filters>
        <field>Sales_Cycle__c</field>
        <operation>contains</operation>
        <value>IY23,1/1/24</value>
    </filters>
    <label>Michele Validations</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>